# transfer_statistics

./: .gitignore  pyproject.toml  setup.cfg
tests/: conftest.py  test__main__.py  test_calculate_metrics.py  test_handle_files.py
tests/testdata/: variable_categories.csv  variables.csv
tests/testdata/integration_data/: simulated_data.csv
tests/testdata/integration_data/metadata/: variable_categories.csv  variables.csv
transfer_statistics/: __main__.py  calculate_metrics.py  handle_files.py  handle_metadata.py  helpers.py  types.py
