[tool.poetry]
name = "transfer-statistics"
version = "0.0.1"
description = ""
authors = ["Dominique Seraphin Hansen <dhansen@diw.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.2"
pandas = "^2.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pylint = "^3.0.1"
isort = "^5.12.0"
pytest = "^7.4.3"
pandas-stubs = "^2.1.1.230928"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = "numpy.typing.mypy_plugin"
